--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
-    margin: 0;
-    padding: 0;
+    margin: 0 ;
+    padding: 0 ;
 
 }
 
@@ -12,20 +12,23 @@ th, td{
     padding: 15px;
     background-color: aqua;
 }
-ul li{
-    margin: 0;
-    padding: 0%;
-   background-color: black;
-   width: 100%;list-style: none;
-
+ul {
+ list-style-type: none;
+  margin: 0;
+  padding: 0 ;
+  overflow: hidden;
+  background-color: #333333;
+  
+ 
 }
 li{
-  float: left;
-  color: white;
-
+  float:  left;
 }
+
 li a{
    display: block;
     color: white;
-    padding: 20px;
+    padding: 15px;
+    text-decoration: none;
+   
 }
