--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    margin: 0 ;
+    margin: 20px ;
     padding: 0 ;
 
 }
@@ -7,10 +7,11 @@ body{
 table, th, td {
     border: 1px solid blue ;
     border-collapse: collapse;
+    
 }
 th, td{
-    padding: 15px;
-    background-color: aqua;
+    padding-right: 10px;
+    background-color: yellow;
 }
 ul {
  list-style-type: none;
@@ -18,8 +19,8 @@ ul {
   padding: 0 ;
   overflow: hidden;
   background-color: #333333;
-  
- 
+  text-align: center;
+
 }
 li{
   float:  left;
@@ -30,5 +31,6 @@ li a{
     color: white;
     padding: 15px;
     text-decoration: none;
+    
    
 }
